adjusted font sizes and removed wrap in document title, removed model debounce in edit mode to avoid delay in saving of document

--- a/public/assets/sass/app.scss
+++ b/public/assets/sass/app.scss
@@ -1,15 +1,12 @@
 //application wide styles here
-
 $brownAccent: #201908;
 $brownAccent: #3A2700;
 $brownAccent: #312409;
-
 @mixin border-box-sizing {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-
 @mixin no-user-select {
     -moz-user-select: none;
     -ms-user-select: none;
@@ -17,39 +14,20 @@ $brownAccent: #312409;
     user-select: none;
     cursor: pointer;
 }
-
 @mixin no-touch-action {
     -ms-touch-action: none;
     touch-action: none;
 }
 
-h1 {
-    font-size: 3em;
-    font-weight: lighter;
-}
-
+h1,
 h2 {
-    font-size: 2em;
     font-weight: lighter;
 }
 
-h3 {
-    font-size: 1.43em;
-    font-weight: normal;
-}
-
-h4 {
-    font-size: 1.14em;
-    font-weight: normal;
-}
-
-h5 {
-    font-size: 0.9em;
-    font-weight: normal;
-}
-
+h3,
+h4,
+h5,
 h6 {
-    font-size: 0.75em;
     font-weight: normal;
 }
 
@@ -58,31 +36,11 @@ pagedown-viewer {
     font-family: Arial;
 }
 
-.edit-in-place {
-    span {
-        cursor: pointer;
-    }
-
-    input {
-        display: none;
-        border: 1px solid #666;
-        outline: none;
-        background: transparent;
-    }
-
-    &.active span {
-        display: none;
-    }
-
-    &.active input {
-        display: inline-block;
-    }
-}
-
 .md-toolbar-tools {
     > h2 {
         overflow: hidden;
         text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     > toggle-fullscreen:last-child > .md-button {
